# repo_final_m8

./: .gitignore  404.html  README.md  docs.html  docs.txt  index.html  index.txt  llms-full.txt
Backend/: .envrc  .gitignore  Cargo.toml  config.default.toml  flake.nix  test_websocket.py
Backend/.sqlx/: query-03f9b49e634c138aacd3b05f6080a84bf8da667823a31c5988b577984b88e497.json  query-0b21ed6aaee8846c85382d698e105cc7c60a854ce14daaf41a5cc947aae31e72.json  query-0ff1542e8881eee8478db0ec806ae14c8a2ce9d423c9d1d9a50242b63da4e783.json  query-1045c753752ae108917cf7ecd916251131e30ff602035f5ab8b1b5681d3222c4.json  query-166d158a87fb001284150957d425c301a7919503b945823c894f6505603e7db6.json  query-1bbbc83463b1d98697e110f195161c5d127c1178beae3d56c4897d9bd64da457.json  query-1f328dcb29f0f38744778d115fa3bddbebaa5d4d302c2d64b6a06cc755a773fd.json  query-23f6a7010d6f9aa88c3a9bf80c6b1eee7014e47bfc4ab83b35efaa2fdf7ad4f8.json  query-2a529ccee91ddc2262779891f15972edab247dfbfc5cfb88d715720cd3e58d38.json  query-2d646e5d21dcdde32b62b171f9ea32997dbcc220bfd1b3a62a9aa495f4155d87.json  query-31ab96c7e28097247a5c7d1e89a03df65489bc29089ea876ce499bd176f9bcab.json  query-3e622a6cca73ae20005bb977ec0117d4eed12ef8cfd6199b8f7a65f6eb7f63d0.json  query-49f07b6910668863a2ddfd8c10b35519486adccd8be8f7ca4a1c20f17420db99.json  query-4a9ce47d58cad67eb3603fba724695c0b854a75ef8afc151d9cf2ebc81345860.json  query-5225c2831e62efeb05402b4c35f603a071b61305e9b068a3cf95228912a9304b.json  query-5c974025dbe8d744a07757db9a13aef5c55e04a604c4c3c74f08aac0d200ba5b.json  query-5e428a3d4f0ef94887708f2a754b57f122126e03ba58a5d1cdf2059347d1c128.json  query-5ed82bf02bc4718d7a3d0bec8b7e164f12207c0263291909bd9766d8e08f141c.json  query-65159193387e6e5ece3408a88ae93ae86f78c9cfda0e3b06f12573e6e75ffb77.json  query-66635083cf9654c15eb77fc71df9950cd6cf342dec3f9ad961c925ed5429249c.json  query-6849f0b1dfff6975d8721fe7eb8ea61d6b37cc956307c2aa126032a0656823c8.json  query-6912d2c365bad2f40037a7fbeb10ba03c2dc2c7e3c193c6f1882038c6040e650.json  query-6f3b3a6bed7423fb2beb09735527a84e98e67cb820861ea4caf03e124d173c6e.json  query-72478a023bb742c7837e535142789462a917596ad2ae6eebf922a7b68ebd1672.json  query-75799dd9075f251f9e91900867a08eaf19f05fc5770fa24baca822a14587bd24.json  query-7afff2c999baaf01fa27f24f8b69ce554b66bc4ec40c5d7a804f57bc9858a34d.json  query-7e329db18e4d18adb47deba67f2ccac5ae7e6e8f33304042cf8cad9d2c130ece.json  query-8bf7ec077b634ecdb25de79fdd47c631f2e8327b644af439dc735558471e94b2.json  query-8ce0050ab247311aec3c7db2b76fa8913efc771c4d4f12854468a5be1fb6038d.json  query-93723f6f50f7e7e682d69cdb06099905f0d6fa5827f272ad1d1f7c4ae35aeeb8.json  query-96f8678b9fce34837a828b6efb112455141cfb479d09d83b6a1ab13ca8d2c62f.json  query-9808dc2590fe30e12cd0f732ed06c3016bd66c4944c336e81ffa0c607e17621b.json  query-98ccfe25d3692d465b133a252e8dd97138b7e49f704bb044091ccce5ca9fe908.json  (+29 more)
Models/: .gitignore  (+2 more)
(+882 files in other folders)
