[package]
name = "webrtc_audio_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
ffmpeg-next = "8.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
webrtc = "0.11"
interceptor = "0.12"
anyhow = "1.0"
