[package]
name = "rust_serial_emergency_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# r2r = "0.9"  # Comentado para evitar problemas de linking
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3.31"
futures = "0.3"
r2r = "0.9.5"
log = "0.4.29"
tokio-serial = "5.4.5"
axum = "0.8.7"
