[package]
name = "rust_audio_player"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
